# calvr

./: .gitignore  .project  CMakeLists.txt  CMakeSettings.json  CalVR-Helmsley.nsi  CalVR.nsi  env  license.txt
.svn/: entries
applications/: CMakeLists.txt
applications/CollabServer/: CMakeLists.txt  CollaborativeServer.cpp  CollaborativeServer.h
applications/OAS/: CMakeLists.txt  Doxyfile  oas_config.xml
applications/OAS/src/: OASAudio.cpp  OASAudio.h  OASAudioBuffer.cpp  OASAudioBuffer.h  OASAudioHandler.cpp  OASAudioHandler.h  OASAudioListener.cpp  OASAudioListener.h  OASAudioSource.cpp  OASAudioSource.h  OASAudioUnit.h  OASFileHandler.cpp  OASFileHandler.h  OASLogger.cpp  OASLogger.h  OASMessage.cpp  OASMessage.h  OASServer.cpp  OASServer.h  OASServerInfo.cpp  OASServerInfo.h  OASServerWindow.cpp  OASServerWindow.h  OASServerWindowLogBrowser.cpp  OASServerWindowLogBrowser.h  OASServerWindowTable.cpp  OASServerWindowTable.h  OASSocketHandler.cpp  OASSocketHandler.h  table-simple.h
applications/vrpn_libusb/: CMakeLists.txt  vrpn.cfg  vrpn_libusb.cpp  vrpn_libusb.h  vrpn_libusb_server.cpp
applications/vrpn_libusb_general/: CMakeLists.txt  vrpn.xml  vrpn_libusb.cpp  vrpn_libusb.h  vrpn_libusb_server.cpp
src/: CMakeLists.txt
src/.svn/: entries
src/collaborative/: CMakeLists.txt  CollaborativeManager.cpp  CollaborativeServer.cpp  CollaborativeThread.cpp
src/collaborative/.svn/: entries
src/config/: CMakeLists.txt  ConfigManager.cpp
src/config/.svn/: dir-prop-base  entries
src/cvrCollaborative/: CMakeLists.txt  CollaborativeManager.cpp  CollaborativeThread.cpp
src/cvrConfig/: CMakeLists.txt  ConfigManager.cpp  XMLReader.cpp
src/cvrInput/: CMakeLists.txt  Gesture.cpp  TrackerAndroid.cpp  TrackerBase.cpp  TrackerGyroMouse.cpp  TrackerMouse.cpp  TrackerOculus.cpp  TrackerOmicron.cpp  TrackerOpenVR.cpp  TrackerPlugin.cpp  TrackerShmem.cpp  TrackerSlave.cpp  TrackerVRPN.cpp  TrackingManager.cpp
src/cvrKernel/: CMakeLists.txt  CVRCullVisitor.cpp  CVRStatsHandler.cpp  CVRViewer.cpp  CalVR.cpp  ComController.cpp  DatabaseHandler.cpp  FileHandler.cpp  InteractionEvent.cpp  InteractionManager.cpp  Navigation.cpp  OpenVRDevice.cpp  PluginHelper.cpp  PluginManager.cpp  SceneManager.cpp  SceneObject.cpp  ScreenBase.cpp  ScreenConfig.cpp  ScreenFixedViewer.cpp  ScreenHMD.cpp  ScreenInterlacedTopBottom.cpp  ScreenLenticular.cpp  ScreenMVCullVisitor.cpp  ScreenMVMaster.cpp  ScreenMVShader.cpp  ScreenMVSimulator.cpp  ScreenMVStencil.cpp  ScreenMVZones.cpp  ScreenMVZones.txt  ScreenMono.cpp  ScreenOculus.cpp  ScreenOpenVR.cpp  ScreenStereo.cpp  StateManager.cpp  ThreadedLoader.cpp  TiledWallSceneObject.cpp
src/cvrKernel/Screens/: ScreenBase.cpp  ScreenFixedViewer.cpp  ScreenHMD.cpp  ScreenInterlacedTopBottom.cpp  ScreenLenticular.cpp  ScreenMVCullVisitor.cpp  ScreenMVMaster.cpp  ScreenMVShader.cpp  ScreenMVSimulator.cpp  ScreenMVStencil.cpp  ScreenMVZones.cpp  ScreenMono.cpp  ScreenStereo.cpp
src/cvrKernel/States/: CollaborationState.cpp  CvrState.cpp  MetadataState.cpp  SpatialState.cpp
src/cvrMenu/: BoardMenu.cpp  BoardPopupMenu.cpp  BubbleMenu.cpp  CMakeLists.txt  DialogPanel.cpp  MenuBar.cpp  MenuButton.cpp  MenuCheckbox.cpp  MenuCollection.cpp  MenuFloatEntryItem.cpp  MenuImage.cpp  MenuIntEntryItem.cpp  MenuItem.cpp  MenuItemGroup.cpp  MenuList.cpp  MenuManager.cpp  MenuRadial.cpp  MenuRangeValue.cpp  MenuRangeValueCompact.cpp  MenuScrollText.cpp  MenuSystem.cpp  MenuText.cpp  MenuTextButtonSet.cpp  MenuTextEntryItem.cpp  PopupMenu.cpp  ScrollingDialogPanel.cpp  SubMenu.cpp  TabbedDialogPanel.cpp  TextInputPanel.cpp  TextInputPannel.cpp
src/cvrMenu/BoardMenu/: BoardMenuBarGeometry.cpp  BoardMenuButtonGeometry.cpp  BoardMenuCheckboxGeometry.cpp  BoardMenuGeometry.cpp  BoardMenuImageGeometry.cpp  BoardMenuItemGroupGeometry.cpp  BoardMenuListGeometry.cpp  BoardMenuRadialGeometry.cpp  BoardMenuRangeValueCompactGeometry.cpp  (+6 more)
src/cvrUtil/: ARCoreHelper.cpp  ARCoreManager.cpp  AndroidDCMHelper.cpp  AndroidGetenv.cpp  AndroidHelper.cpp  AndroidPreloadPlugins.cpp  AndroidStdio.cpp  CMakeLists.txt  CVRMulticastSocket.cpp  CVRSocket.cpp  ComputeBoundingBoxVisitor.cpp  DepthPartitionNode.cpp  DistanceAccumulator.cpp  Intersection.cpp  LightingEstimator.cpp  LocalToWorldVisitor.cpp  MultiListenSocket.cpp  OsgGlesMath.cpp  OsgMath.cpp  OsgPrint.cpp  PointsNode.cpp  TextureVisitors.cpp  TimeOfDay.cpp  glesDrawable.cpp
src/input/: CMakeLists.txt  TrackerBase.cpp  TrackerMouse.cpp  TrackerShmem.cpp  TrackerSlave.cpp  TrackerVRPN.cpp  TrackingManager.cpp
src/kernel/: CMakeLists.txt  CVRCullVisitor.cpp  CVRViewer.cpp  CalVR.cpp  ComController.cpp  FileHandler.cpp  InteractionEvent.cpp  InteractionManager.cpp  MultiViewScreen.cpp  Navigation.cpp  PluginHelper.cpp  PluginManager.cpp  PreCullVisitor.cpp  SceneManager.cpp  SceneObject.cpp  ScreenBase.cpp  ScreenConfig.cpp  ScreenFixedViewer.cpp  ScreenHMD.cpp  ScreenInterlacedTopBottom.cpp  ScreenLenticular.cpp  ScreenMVCullVisitor.cpp  ScreenMVMaster.cpp  ScreenMVShader.cpp  ScreenMVSimulator.cpp  ScreenMVStencil.cpp  ScreenMVZones.cpp  ScreenMono.cpp  ScreenMultiViewer.cpp  ScreenMultiViewer2.cpp  ScreenStereo.cpp  ThreadedLoader.cpp
src/main/: CMakeLists.txt  CalVR.cpp  main.cpp
src/menu/: BoardMenu.cpp  BoardPopupMenu.cpp  CMakeLists.txt  DialogPanel.cpp  MenuButton.cpp  MenuCheckbox.cpp  MenuImage.cpp  MenuItem.cpp  MenuList.cpp  MenuManager.cpp  MenuRangeValue.cpp  MenuRangeValueCompact.cpp  MenuScrollText.cpp  MenuSystem.cpp  MenuText.cpp  MenuTextButtonSet.cpp  PopupMenu.cpp  ScrollingDialogPanel.cpp  SubMenu.cpp  TabbedDialogPanel.cpp
src/osgcaveui/: Arrow.cpp  CMakeLists.txt  CUI.cpp  Calculator.cpp  Card.cpp  Interaction.cpp  LogFile.cpp  PickBox.cpp  RadioButton.cpp  RadioGroup.cpp  VirvoDeps.cpp  Widget.cpp  cvrvvtoolshed.cpp
src/util/: CMakeLists.txt  CVRMulticastSocket.cpp  CVRSocket.cpp  ComputeBoundingBoxVisitor.cpp  DepthPartitionNode.cpp  DistanceAccumulator.cpp  Intersection.cpp  LocalToWorldVisitor.cpp  MultiListenSocket.cpp  OSGMath.cpp  OsgMath.cpp  OsgPrint.cpp  TextureVisitors.cpp  TimeOfDay.cpp
(+719 files in other folders)
