IF(NOT WIN32)
    ADD_SUBDIRECTORY(config)
    ADD_SUBDIRECTORY(input)
    ADD_SUBDIRECTORY(menu)

    #ADD_SUBDIRECTORY(osgcaveui)

    ADD_SUBDIRECTORY(collaborative)
    ADD_SUBDIRECTORY(util)

    ADD_SUBDIRECTORY(kernel)
    ADD_SUBDIRECTORY(main)
ELSE(NOT WIN32)

    IF(WIN32)
	    IF(DYNAMIC_LINKING)
		    SET(CALVR_WIN_DYNAMIC "true")
	    ENDIF(DYNAMIC_LINKING)
    ENDIF(WIN32)

    SET(CALVR_WIN_LIB CalVRAll)
    SET(CALVR_WIN_PUBLIC_HEADERS)
	SET(CALVR_WIN_SRC_FILES)
	SET(CALVR_WIN_EXTERNAL_INCLUDES)
	SET(CALVR_WIN_EXTERNAL_LIBRARIES)
	INCLUDE(collaborative/CMakeLists.txt)
    INCLUDE(config/CMakeLists.txt)
	INCLUDE(input/CMakeLists.txt)
	INCLUDE(menu/CMakeLists.txt)
	INCLUDE(util/CMakeLists.txt)
	INCLUDE(kernel/CMakeLists.txt)
	SETUP_MAIN_LIBRARY()

	ADD_SUBDIRECTORY(main)
ENDIF(NOT WIN32)
