IF(NOT WIN32)
    ADD_SUBDIRECTORY(cvrConfig)
    ADD_SUBDIRECTORY(cvrInput)
    ADD_SUBDIRECTORY(cvrMenu)
    ADD_SUBDIRECTORY(cvrCollaborative)
    ADD_SUBDIRECTORY(cvrUtil)
    ADD_SUBDIRECTORY(cvrKernel)
    ADD_SUBDIRECTORY(main)
ELSE(NOT WIN32)

    IF(WIN32)
	    IF(DYNAMIC_LINKING)
		    SET(CALVR_WIN_DYNAMIC "true")
	    ENDIF(DYNAMIC_LINKING)
    ENDIF(WIN32)

    SET(CALVR_WIN_LIB CalVRAll)
    SET(CALVR_WIN_PUBLIC_HEADERS)
	SET(CALVR_WIN_SRC_FILES)
	SET(CALVR_WIN_EXTERNAL_INCLUDES)
	SET(CALVR_WIN_EXTERNAL_LIBRARIES)
	INCLUDE(cvrCollaborative/CMakeLists.txt)
    INCLUDE(cvrConfig/CMakeLists.txt)
	INCLUDE(cvrInput/CMakeLists.txt)
	INCLUDE(cvrMenu/CMakeLists.txt)
	INCLUDE(cvrUtil/CMakeLists.txt)
	INCLUDE(cvrKernel/CMakeLists.txt)
	SETUP_MAIN_LIBRARY()

	ADD_SUBDIRECTORY(main)
ENDIF(NOT WIN32)
