ADD_EXECUTABLE(CollabServer CollaborativeServer.cpp)

IF(WIN32)
    REMOVE_OUTPUT_DIRS(CollabServer)
ENDIF(WIN32)

INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIR})

TARGET_LINK_LIBRARIES(CollabServer cvrUtil)
TARGET_LINK_LIBRARIES(CollabServer cvrKernel)
TARGET_LINK_LIBRARIES(CollabServer cvrMenu)
TARGET_LINK_LIBRARIES(CollabServer cvrInput)
TARGET_LINK_LIBRARIES(CollabServer cvrConfig)
TARGET_LINK_LIBRARIES(CollabServer cvrCollaborative)
TARGET_LINK_LIBRARIES(CollabServer ${OSG_LIBRARIES})

INSTALL(TARGETS CollabServer DESTINATION bin)
