ADD_EXECUTABLE(OAS OASServer.cpp OASSocketHandler.cpp OASAudioHandler.cpp OASAudio.cpp OASLogger.cpp OASServerWindow.cpp OASFileHandler.cpp OASMessage.cpp)

FIND_PACKAGE(OpenAL)

INCLUDE_DIRECTORIES(${OPENAL_INCLUDE_DIR})

TARGET_LINK_LIBRARIES(OAS ${OPENAL_LIBRARY})

INSTALL(TARGETS OAS DESTINATION bin)

