ADD_EXECUTABLE(OAS src/OASServer.cpp src/OASSocketHandler.cpp
src/OASAudioHandler.cpp src/OASAudio.cpp src/OASLogger.cpp
src/OASServerWindow.cpp src/OASFileHandler.cpp src/OASMessage.cpp)

FIND_PACKAGE(OpenAL REQUIRED)
FIND_PACKAGE(ALUT REQUIRED)
FIND_PACKAGE(FLTK REQUIRED)

INCLUDE_DIRECTORIES(src)
INCLUDE_DIRECTORIES(${OPENAL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${ALUT_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${FLTK_INCLUDE_DIR})

TARGET_LINK_LIBRARIES(OAS ${OPENAL_LIBRARY})
TARGET_LINK_LIBRARIES(OAS ${ALUT_LIBRARY})
TARGET_LINK_LIBRARIES(OAS ${FLTK_LIBRARY})

INSTALL(TARGETS OAS DESTINATION bin)

