ADD_EXECUTABLE(OAS src/OASServer.cpp src/OASSocketHandler.cpp
src/OASAudioHandler.cpp src/OASAudioBuffer.cpp src/OASAudioSource.cpp 
src/OASAudioListener.cpp src/OASLogger.cpp src/OASServerWindow.cpp 
src/OASFileHandler.cpp src/OASMessage.cpp src/OASServerInfo.cpp 
src/OASServerWindowLogBrowser.cpp src/OASServerWindowTable.cpp)

FIND_PACKAGE(OPENAL REQUIRED)
FIND_PACKAGE(ALUT REQUIRED)
FIND_PACKAGE(FLTK REQUIRED)
FIND_PACKAGE(MXML REQUIRED)

INCLUDE_DIRECTORIES(src)
INCLUDE_DIRECTORIES(${OPENAL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${ALUT_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${FLTK_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${MXML_INCLUDE_DIR})

TARGET_LINK_LIBRARIES(OAS ${OPENAL_LIBRARY})
TARGET_LINK_LIBRARIES(OAS ${ALUT_LIBRARY})
TARGET_LINK_LIBRARIES(OAS ${FLTK_LIBRARY})
TARGET_LINK_LIBRARIES(OAS ${MXML_LIBRARY})

INSTALL(TARGETS OAS DESTINATION bin)

