ADD_EXECUTABLE(libusb_general_server vrpn_libusb.cpp vrpn_libusb_server.cpp)

IF(WIN32)
    REMOVE_OUTPUT_DIRS(vrpn_libusb_server)
ENDIF(WIN32)

FIND_PACKAGE(VRPN)
FIND_PACKAGE(libusb-1)
FIND_PACKAGE(MXML)

INCLUDE_DIRECTORIES(${VRPN_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${LIBUSB1_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${MXML_INCLUDE_DIR})

TARGET_LINK_LIBRARIES(libusb_general_server ${VRPN_LIBRARY})
TARGET_LINK_LIBRARIES(libusb_general_server ${LIBUSB1_LIBRARY})
TARGET_LINK_LIBRARIES(libusb_general_server ${MXML_LIBRARY})

INSTALL(TARGETS libusb_general_server DESTINATION bin)
