SET(COLLAB_LINK_LIBS util)

SET(COLLAB_SOURCE
    CollaborativeServer.cpp
    )

INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIR})

ADD_EXECUTABLE(CollabServer ${COLLAB_SOURCE})
TARGET_LINK_LIBRARIES(CollabServer ${COLLAB_LINK_LIBS})
TARGET_LINK_LIBRARIES(CollabServer ${OSG_LIBRARIES})

INSTALL(TARGETS CollabServer DESTINATION bin)

SET(LIB_NAME collaborative)
SET(HEADER_PATH ${CalVR_SOURCE_DIR}/include/${LIB_NAME})
SET(LIB_PUBLIC_HEADERS
    ${HEADER_PATH}/CollaborativeManager.h
    ${HEADER_PATH}/CollaborativeThread.h
)

SET(EXTRA_SOURCE)

ADD_LIBRARY(${LIB_NAME}
    ${CALVR_DYNAMIC_OR_STATIC}
    ${LIB_PUBLIC_HEADERS}
    ${EXTRA_SOURCE}
    CollaborativeManager.cpp
    CollaborativeThread.cpp
)

INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${OSG_LIBRARIES})

INSTALL(TARGETS ${LIB_NAME} DESTINATION lib)
