IF(WIN32)
	IF(DYNAMIC_LINKING)
		ADD_DEFINITIONS(-DCVRCONFIG_LIBRARY)
	ELSE(DYNAMIC_LINKING)
		ADD_DEFINITIONS(-DCVRCONFIG_LIBRARY_STATIC)
	ENDIF(DYNAMIC_LINKING)
ENDIF(WIN32)

SET(LIB_NAME config)
SET(HEADER_PATH ${CalVR_SOURCE_DIR}/include/${LIB_NAME})
SET(LIB_PUBLIC_HEADERS
    ${HEADER_PATH}/ConfigManager.h
	${HEADER_PATH}/Export.h
)

ADD_LIBRARY(${LIB_NAME}
    ${CALVR_DYNAMIC_OR_STATIC}
    ${LIB_PUBLIC_HEADERS}
    ConfigManager.cpp
)

IF(WIN32)
	FIND_PACKAGE(Winsock2)
	TARGET_LINK_LIBRARIES(${LIB_NAME} ${WINSOCK2_LIBRARY})
ENDIF(WIN32)

TARGET_LINK_LIBRARIES(${LIB_NAME} ${MXML_LIBRARY})
INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${OSG_LIBRARIES})

INSTALL(TARGETS ${LIB_NAME} DESTINATION lib)
