IF(NOT WIN32)
    SET(MAIN_LINK_LIBS config ${CMAKE_THREAD_LIBS_INIT})
    SET(MAIN_LINK_LIBS input ${MAIN_LINK_LIBS})
    SET(MAIN_LINK_LIBS menu ${MAIN_LINK_LIBS})
    SET(MAIN_LINK_LIBS collaborative ${MAIN_LINK_LIBS})
    SET(MAIN_LINK_LIBS util ${MAIN_LINK_LIBS})

    IF(OSGCAVEUI)
        SET(MAIN_LINK_LIBS osgcaveui ${MAIN_LINK_LIBS})
    ENDIF(OSGCAVEUI)

    SET(MAIN_LINK_LIBS kernel ${MAIN_LINK_LIBS})
ELSE(NOT WIN32)
    SET(MAIN_LINK_LIBS ${CALVR_WIN_LIB})
ENDIF(NOT WIN32)

INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIR})

ADD_EXECUTABLE(CalVR main.cpp)
IF(WIN32)
    REMOVE_OUTPUT_DIRS(CalVR)
ENDIF(WIN32)
TARGET_LINK_LIBRARIES(CalVR ${MAIN_LINK_LIBS})
TARGET_LINK_LIBRARIES(CalVR ${OSG_LIBRARIES})

INSTALL(TARGETS CalVR DESTINATION bin)
