IF(NOT WIN32)
    SET(MAIN_LINK_LIBS cvrConfig ${CMAKE_THREAD_LIBS_INIT})
    SET(MAIN_LINK_LIBS cvrInput ${MAIN_LINK_LIBS})
    SET(MAIN_LINK_LIBS cvrMenu ${MAIN_LINK_LIBS})
    SET(MAIN_LINK_LIBS cvrCollaborative ${MAIN_LINK_LIBS})
    SET(MAIN_LINK_LIBS cvrUtil ${MAIN_LINK_LIBS})
    SET(MAIN_LINK_LIBS cvrKernel ${MAIN_LINK_LIBS})
ELSE(NOT WIN32)
    SET(MAIN_LINK_LIBS ${CALVR_WIN_LIB})
ENDIF(NOT WIN32)

INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIR})

ADD_EXECUTABLE(CalVR main.cpp)
IF(WIN32)
    REMOVE_OUTPUT_DIRS(CalVR)
ENDIF(WIN32)
TARGET_LINK_LIBRARIES(CalVR ${MAIN_LINK_LIBS})
TARGET_LINK_LIBRARIES(CalVR ${OSG_LIBRARIES})

INSTALL(TARGETS CalVR DESTINATION bin)
